# libcoin

./: .gitignore  .travis.yml  CMakeLists.txt  NEWS.txt  README.txt  db.cpp  index.html  main.cpp  main.h  net.cpp
applications/: CMakeLists.txt
applications/bitcoin/: bitcoin.cpp
applications/bitcoin-wx/: ui.h
applications/bitcoind/: CMakeLists.txt  bitcoind.cpp  init.cpp
applications/bitnoded/: init.cpp  rpc.cpp
applications/btc/: CMakeLists.txt  btc.cpp  cmake_install.cmake
applications/btc/CMakeScripts/: application_btc_postBuildPhase.makeDebug
applications/btcd/: CMakeLists.txt  btcd.cpp  proxy.cpp  proxy.h
applications/btcd/www/donate/: index.html
applications/btcd/www/js/: jquery.js_
applications/btcd/www/js/btc/: base58.js  eckey.js  script.js
applications/btcproxy/: CMakeLists.txt  asset.cpp  asset.h  btcproxy.cpp  init.cpp  init.h  proxy.cpp  proxy.h  rpc.cpp
applications/btcproxy/www/js/: btc.js_
applications/btcproxy/www/js/btc/: address.js  asset.js  ecdsa.js  opcode.js  tx.js  util.js
applications/btcproxy/www/wallet/: index.html
applications/coinexplorer/: CMakeLists.txt  coinexplorer.cpp
applications/coinexplorer/www/css/: demo-print.css  demo.css
applications/coinexplorer/www/explorer/: index.html
applications/coinexplorer/www/js/: raphael.js_
applications/cryptoshi/: CMakeLists.txt  cryptoshi.cpp
applications/libcoind/: CMakeLists.txt  libcoind.cpp
examples/: CMakeLists.txt
examples/btcsimple/: CMakeLists.txt  btcsimple.cpp
examples/extrawallet/: CMakeLists.txt  extrawallet.cpp
examples/ponzicoin/: CMakeLists.txt  ponzicoin.cpp
examples/simplecoin/: CMakeLists.txt  simplecoin.cpp
src/: CMakeLists.txt  db.cpp  db.h  key.cpp  main.cpp  main.h  net.cpp  noui.h  rpc.cpp  util.cpp
src/btc/: Address.cpp  Block.cpp  CMakeLists.txt  Transaction.cpp  asset.cpp  config.in  crypter.cpp  keystore.cpp  main.cpp  script.cpp  tx.cpp  util.cpp  version.in
src/btcHTTP/: CMakeLists.txt  Client.cpp  Connection.cpp  ConnectionManager.cpp  Method.cpp  RPC.cpp  Reply.cpp  RequestHandler.cpp  Server.cpp
src/btcMine/: CMakeLists.txt  CPUHasher.cpp  Miner.cpp  MinerRPC.cpp
src/btcNode/: Alert.cpp  AlertFilter.cpp  BlockChain.cpp  BlockFile.cpp  BlockFilter.cpp  BlockIndex.cpp  CMakeLists.txt  Chain.cpp  ChatClient.cpp  Endpoint.cpp  EndpointFilter.cpp  EndpointPool.cpp  Inventory.cpp  MessageHandler.cpp  MessageHeader.cpp  MessageParser.cpp  Node.cpp  Peer.cpp  PeerManager.cpp  TransactionFilter.cpp  VersionFilter.cpp  block.cpp  db.cpp  irc.cpp  main.cpp  net.cpp
src/btcRPC/: CMakeLists.txt  rpc.cpp
src/btcWallet/: CMakeLists.txt  CryptoKeyStore.cpp  MerkleTx.cpp  WalletTx.cpp  wallet.cpp  walletdb.cpp  walletrpc.cpp
src/coin/: Address.cpp  Asset.cpp  AuxPow.cpp  Block.cpp  BlockHeader.cpp  CMakeLists.txt  Currency.cpp  ExtendedKey.cpp  Key.cpp  KeyStore.cpp  Logger.cpp  MerkleTx.cpp  NameOperation.cpp  Point.cpp  Script.cpp  Serialization.cpp  Shamir.cpp  Transaction.cpp  scrypt.c  util.cpp  version.in
src/coinChain/: Alert.cpp  AlertFilter.cpp  BlockChain.cpp  BlockFile.cpp  BlockFilter.cpp  BlockIndex.cpp  BlockTree.cpp  BloomFilter.cpp  CMakeLists.txt  Chain.cpp  ChatClient.cpp  Claims.cpp  Configuration.cpp  Database.cpp  Endpoint.cpp  EndpointFilter.cpp  EndpointPool.cpp  FilterHandler.cpp  Inventory.cpp  MerkleBlock.cpp  MerkleTrie.cpp  MessageHandler.cpp  MessageHeader.cpp  MessageParser.cpp  Node.cpp  NodeRPC.cpp  Peer.cpp  PeerManager.cpp  Proxy.cpp  TransactionFilter.cpp  Verifier.cpp  VersionFilter.cpp  db.cpp
src/coinHTTP/: CMakeLists.txt  Client.cpp  Connection.cpp  ConnectionManager.cpp  Method.cpp  MimeTypes.cpp  RPC.cpp  Reply.cpp  Request.cpp  RequestHandler.cpp  RequestParser.cpp  Server.cpp
src/coinMine/: CMakeLists.txt  CPUHasher.cpp  Miner.cpp  MinerRPC.cpp
src/coinNAT/: CMakeLists.txt  PortMapper.cpp
src/coinNAT/libnatpmp/: declspec.h
src/coinNAT/miniupnpc/: declspec.h  minissdpc.c  miniupnpc.c  miniupnpcstrings.h  miniwget.c
src/coinName/: CMakeLists.txt  NameGetRPC.cpp  NameWalletRPC.cpp  Names.cpp
src/coinPool/: CMakeLists.txt  GetBlockTemplate.cpp  GetWork.cpp  Miner.cpp  Pool.cpp  SubmitBlock.cpp  cmake_install.cmake
src/coinPool/CMakeScripts/: coinPool_postBuildPhase.makeDebug  coinPool_postBuildPhase.makeMinSizeRel  coinPool_postBuildPhase.makeRelWithDebInfo  coinPool_postBuildPhase.makeRelease
src/coinPool/libcoin.build/Debug/coinPool.build/: Script-2E8C313340F4470CBCD0D660.sh  coinPool.dep  coinPool~.dep
src/coinPool/libcoin.build/Debug/coinPool.build/Objects-normal/x86_64/: GetBlockTemplate.d  Pool.d  (+7 more)
src/coinStat/: CMakeLists.txt  Explorer.cpp  ExplorerRPC.cpp
src/coinWallet/: BerkeleyDB.cpp  CMakeLists.txt  Crypter.cpp  CryptoKeyStore.cpp  Key.cpp  KeyStore.cpp  MerkleTx.cpp  NameWalletRPC.cpp  Wallet.cpp  WalletDB.cpp  WalletRPC.cpp  WalletTx.cpp
tests/: CMakeLists.txt
tests/blocktree/: CMakeLists.txt  blocktree.cpp
tests/claims/: CMakeLists.txt  claims.cpp  cmake_install.cmake
tests/claims/CMakeScripts/: test_claims_postBuildPhase.makeRelease
tests/claims/libcoin.build/Debug/test_claims.build/: Script-7CC9B0A3C6054650810B5785.sh  test_claims.dep  test_claims~.dep
tests/client/: CMakeLists.txt  client.cpp
tests/extended_key/: CMakeLists.txt  extended_key.cpp
tests/jsonance/: CMakeLists.txt  jsonance.cpp
tests/merkletrie/: CMakeLists.txt  cmake_install.cmake  merkletrie.cpp
tests/merkletrie/CMakeScripts/: test_authtrie_postBuildPhase.makeDebug  test_merkletrie_postBuildPhase.makeRelWithDebInfo
tests/merkletrie/libcoin.build/Debug/test_authtrie.build/: Script-9E1C1A3E46A94243B94B3E38.sh  test_authtrie.dep  test_authtrie~.dep
tests/merkletrie/libcoin.build/Debug/test_merkletrie.build/: Script-EFB955215E654945A8DEA717.sh  test_merkletrie.dep  test_merkletrie~.dep
tests/namecoin/: CMakeLists.txt  namecoin.cpp
tests/serialize/: CMakeLists.txt  serialize.cpp
tests/shamir/: CMakeLists.txt  shamir.cpp
tests/sqliterate/: CMakeLists.txt  cmake_install.cmake  sqliterate.cpp
tests/sqliterate/CMakeScripts/: test_sqliterate_postBuildPhase.makeDebug
(+209 files in other folders)
